--- a/styles/overlays.css
+++ b/styles/overlays.css
@@ -9,6 +9,14 @@
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
 
 }
+#backdrop{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+}
 @media(min-width: 48rem)
 {
     .modal{
