--- a/styles/overlays.css
+++ b/styles/overlays.css
@@ -1,4 +1,4 @@
-.modal{
+.modal {
     position: fixed;
     top: 20%;
     left: 5%;
@@ -8,22 +8,21 @@
     border-radius: 6px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
     display: none;
-
-}
-#backdrop{
+  }
+  
+  #backdrop {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.7);
     display: none;
-}
-@media(min-width: 48rem)
-{
-    .modal{
-        left: calc(50% - 20rem);
-        width: 40rem;
-
+  }
+  
+  @media (min-width: 48rem) {
+    .modal {
+      left: calc(50% - 20rem);
+      width: 40rem;
     }
-}
+  }
