--- a/styles/game.css
+++ b/styles/game.css
@@ -48,4 +48,12 @@
     font-weight: bold;
   }
   
- 
+  #game-board li:hover {
+    background-color: rgb(112, 13, 204);
+  }
+  
+  #game-board li.disabled {
+    background-color: rgb(112, 13, 204);
+    color: white;
+    cursor: default;
+  }
